--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="send">send</string>
     <string name="FeedbackMessage">Your Feedback</string>
     <string name="EnterMessage">Please enter your feedback here</string>
+    <string name="todo">TODO</string>
 </resources>
