--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="my_voucher">My_Voucher</string>
     <string name="news">News</string>
     <string name="textview">TextView</string>
+    <string name="PinNumber">Enter your pin number</string>
+    <string name="confirm">Confirm</string>
 </resources>
