--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,14 @@
     <string name="textview">TextView</string>
     <string name="PinNumber">Enter your pin number</string>
     <string name="confirm">Confirm</string>
+    <string name="addCard">Add a New Card</string>
+    <string name="CardName">Name on Your Card</string>
+    <string name="CVC">CVC Number</string>
+    <string name="CardNum">Card Number</string>
+    <string name="ValidTill">Valid Through(Month/Year)</string>
+    <array name="cardType_array">
+        <item>Visa</item>
+        <item>Master</item>
+    </array>
+    <string name="btnSubmit">Submit</string>
 </resources>
