--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,14 @@
     <string name="textview">TextView</string>
     <string name="PinNumber">Enter your pin number</string>
     <string name="confirm">Confirm</string>
+    <string-array name="cardType_array">
+        <item>Visa</item>
+        <item>Master</item>
+    </string-array>
+    <string name="addCard">Add a New Card</string>
+    <string name="CardName">Name on Card</string>
+    <string name="ValidTill">Valid Thru</string>
+    <string name="CVC">CVC Number</string>
+    <string name="btnSubmit">Submit</string>
+    <string name="home">Home</string>
 </resources>
