--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="change">Change</string>
+    <string name="emailSetting">Email :</string>
+    <string name="passwordSetting">Password :</string>
+    <string name="full_nameSetting">Full Name :</string>
+    <string name="phoneSetting">Phone :</string>
+    <string name="pinSetting">Pin :</string>
+    <string name="nick_name">Nick Name :</string>
 </resources>
